syntax = "proto3";

option go_package = "be-authentication/auth";

message AddUserReq {
    string username = 1;
    string password = 2;
    string updated_at = 3;
    string created_at = 4;
}

message AddUserRes {
    int64 id = 1;
    string message = 2;
    string created_at= 3;
}

message GetUserByIdReq {
    int64 id =1;
}

message GetUserByIdRes {
    int64 id =1;
    string username = 2;
}

message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginRes {
    string message = 1;
    int64 id = 2; 
}

service Authentication {
    rpc addUser(AddUserReq) returns (AddUserRes);
    rpc GetUserById(GetUserByIdReq) returns (GetUserByIdRes);
    rpc Login(LoginReq) returns (LoginRes);
}